--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "npm run build && wrangler deploy"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.5",
     "@cloudflare/vite-plugin": "^1.14.2",
     "vite": "^7.2.2",
     "wrangler": "^4.48.0"
