--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "betaflight-opengraph",
-  "private": "false",
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "npm run build && vite preview",
-    "deploy": "npm run build && wrangler deploy"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.3.5",
-    "@cloudflare/vite-plugin": "^1.14.2",
-    "vite": "^7.2.2",
-    "wrangler": "^4.48.0"
-  }
+	"name": "betaflight-opengraph",
+	"private": "false",
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "npm run build && vite preview",
+		"deploy": "npm run build && wrangler deploy",
+		"check": "biome check .",
+		"check:write": "biome check --write ."
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.5",
+		"@cloudflare/vite-plugin": "^1.14.2",
+		"vite": "^7.2.2",
+		"wrangler": "^4.48.0"
+	}
 }
