--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,5 @@
 		"strictFunctionTypes": true,
 		"sourceMap": true
 	},
-	"exclude": [
-		"node_modules",
-		"**/node_modules/*"
-	]
+	"exclude": ["node_modules", "**/node_modules/*"]
 }
