Feature: Implement OG API

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,5 +2,5 @@
 	"$schema": "./node_modules/wrangler/config-schema.json",
 	"name": "betaflight-opengraph",
 	"compatibility_date": "2025-04-03",
-	"main": "./src/index.ts"
+	"main": "./src/index.tsx"
 }
