--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.3.5",
 		"@cloudflare/vite-plugin": "^1.14.2",
+		"@types/react": "^19.2.5",
 		"vite": "^7.2.2",
 		"wrangler": "^4.48.0"
+	},
+	"dependencies": {
+		"react": "^19.2.0",
+		"workers-og": "^0.0.27"
 	}
 }
