--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		"module": "ESNext",
 		"moduleResolution": "Bundler",
 		"target": "ES2022",
-		"jsx": "react",
+		"jsx": "react-jsx",
 		"strictNullChecks": true,
 		"strictFunctionTypes": true,
 		"sourceMap": true
