--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,5 +2,20 @@
 	"$schema": "./node_modules/wrangler/config-schema.json",
 	"name": "betaflight-opengraph",
 	"compatibility_date": "2025-04-03",
-	"main": "./src/index.tsx"
+	"main": "./src/index.tsx",
+	"observability": {
+		"enabled": false,
+		"head_sampling_rate": 1,
+		"logs": {
+			"enabled": true,
+			"head_sampling_rate": 1,
+			"persist": true,
+			"invocation_logs": true
+		},
+		"traces": {
+			"enabled": false,
+			"persist": true,
+			"head_sampling_rate": 1
+		}
+	}
 }
