--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,6 +3,9 @@
 	"name": "betaflight-opengraph",
 	"compatibility_date": "2025-04-03",
 	"main": "./src/index.tsx",
+	"assets": {
+		"directory": "./public"
+	},
 	"observability": {
 		"enabled": false,
 		"head_sampling_rate": 1,
